--- a/src/Resources/templates/brand/brand.v1.html.twig
+++ b/src/Resources/templates/brand/brand.v1.html.twig
@@ -10,7 +10,7 @@
 {% set _icon = icon|default('') %}              {# Logo icon, for responsive #}
 {% set _icon_set = icon_set|default('') %}      {# Logo icons set, for responsive #}
 {% set _tagline = tagline|default('') %}        
-{% set _size = size|default('medium') %}
+{% set _size = size|default('medium') %}        {# Brand size small / medium / large #}
 
 
 {# ------------------- DevBrain Component : Brand - Attr -------------------- #}
