--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -15,10 +15,12 @@
 /// =============================================
 ///
 
+// Default Variables
+// --------------------------
+
 
 // Default Theme
 // --------------------------
-
 
 $default--menu--background-color              : $white;
 $default--submenu--background-color           : $white;
