--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -38,6 +38,7 @@ $default--hero--background-color    : $gray-200;
         padding: $spacer * 3;
 
         display: flex;
+        flex-direction: column;
         align-items: center;
         flex-grow: 1;
         flex-shrink: 0;  
