--- a/sass/abstracts/functions/_color.scss
+++ b/sass/abstracts/functions/_color.scss
@@ -10,15 +10,11 @@
 /// Slightly lighten a color
 /// =============================================
 /// 
-/// @example 
-///   color.tint(#FF9900, 20); 
+/// @example color.tint(#FF9900, 20); 
 /// 
-/// @param {Color} $color
-///   The original color you need to tint
-/// @param {Number} $percentage
-///   Percentage level of tint
-/// @return {Color}
-///   The new tinted color
+/// @param {Color} $colorThe original color you need to tint
+/// @param {Number} $percentagePercentage level of tint
+/// @return {Color}The new tinted color
 /// 
 @function tint($color, $percentage) 
 {
@@ -28,17 +24,26 @@
 /// Slightly darken a color
 /// =============================================
 /// 
-/// @example 
-///   color.shade(#FF9900, 20); 
+/// @example color.shade(#FF9900, 20); 
 /// 
-/// @param {Color} $color 
-///   The original color you need to shade
-/// @param {Number} $percentage 
-///   Percentage level of shade
-/// @return {Color}
-///   The new shaded color
+/// @param {Color} $color The original color you need to shade
+/// @param {Number} $percentage Percentage level of shade
+/// @return {Color}The new shaded color
 /// 
 @function shade($color, $percentage) 
 {
   @return mix(black, $color, $percentage);
+}
+
+
+@function contrastText($color) {
+  $result: invert($color);
+  $lightness: lightness($result);
+  @if ($lightness < 50) {
+    $result: black;
+  }
+  @else {
+    $result: white;
+  }
+  @return $result;
 }
