--- a/sass/abstracts/variables/_colors.scss
+++ b/sass/abstracts/variables/_colors.scss
@@ -4,10 +4,12 @@
 // *                                                                        * //
 // ************************************************************************** //
 
+$pallet: () !default;
+
 /// Black & White & Gray
 /// =============================================
 ///
-$black                  : #111111 !default; // #050505 !default;
+$black                  : #111111 !default; // #050505 343a40 !default;
 $white                  : #ffFFFf !default;
 $gray-100               : #f8f9fa !default;
 $gray-200               : #e9ecef !default;
@@ -33,3 +35,17 @@ $yellow                 : #ffc107 !default;
 $green                  : #198754 !default;
 $teal                   : #20c997 !default;
 $cyan                   : #0dcaf0 !default;
+
+
+/// Pallet
+/// =============================================
+///
+$success                : $green !default;
+$danger                 : $red !default;
+$warning                : $orange !default;
+$info                   : $cyan !default;
+$primary                : $blue !default;
+$secondary              : $gray-600 !default;
+$light                  : $white !default;
+$dark                   : $black !default;
+$muted                  : $gray-500 !default;
