--- a/sass/components/_chip.scss
+++ b/sass/components/_chip.scss
@@ -4,6 +4,10 @@
 // *
 // ************************************************************************** //
 
+@use './../abstracts/mixins/corner';
+@use './../abstracts/mixins/spaces';
+@use './../abstracts/functions/color';
+
 
 /// Chip variables
 /// =============================================
@@ -15,4 +19,16 @@
 ///
 
 .chip {
+    @include corner.rounded(6px);
+    @include spaces.padding( $spacer * .6, $spacer * 1.4, $spacer * .6, $spacer * 1.4 );
+    border-width: 1px;
+    border-style: solid;
+}
+
+@each $key, $value in $base-pallet {
+    .chip-#{$key} {
+        color: $value;
+        background-color: color.tint($value, 70%);
+        border-color: $value;
+    }
 }
