--- a/sass/utilities/_font.scss
+++ b/sass/utilities/_font.scss
@@ -15,3 +15,9 @@
         font-weight: #{$i}00;
     }
 }
+
+@each $key, $value in $base-pallet {
+    .text-#{$key} {
+        color: $value;
+    }
+}
